# TransfiniteArraysInQuickSpec

./: .gitignore  README.md  TransfiniteArrays.cabal  stack.yaml
quickspec/: Main.hs
src/: Arrays.hs  CantorNormalForm.hs
test/: Ordinals.hs
