name:                TransfiniteArrays
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/TransfiniteArrays#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CantorNormalForm
                     , Arrays  
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , quickcheck-instances
  default-language:    Haskell2010

executable quickspec
  main-is: Main.hs
  hs-source-dirs:
    quickspec
  build-depends:
      TransfiniteArrays
    , base >=4.7 && <5
    , quickspec == 2 
    , QuickCheck
  other-modules:
  ghc-options: -rtsopts
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/MaximilianAlgehed/TransfiniteArrays
